--- a/gb/25/12/5/n14649603.md
+++ b/gb/25/12/5/n14649603.md
@@ -5,11 +5,11 @@
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/09/id14597483-795856-600x400.jpg" />
 <h6>2025年12月5日，苹果公司表示，已向84个国家的用户发出网络威胁通知。示意图。（宋碧龙／大纪元）</h6>
 <hr>
-	<p>【大纪元2025年12月05日讯】（大纪元记者张婷综合报导）苹果周五（12月5日）表示，已向84个国家的用户发送了新一轮网络威胁通知，这是这家美国科技巨头为保护用户免受监控威胁而采取的最新举措。</p>
-<p>据路透社报导，苹果是多家定期向用户发出警告的科技公司之一，当这些公司认定用户可能遭到国家支持的黑客攻击时，便会发布相关提醒。苹果在声明中说，这些警告于12月2日发出。但声明并没有提供更多的有关监控的细节，也没有说明受影响用户的数量问题，或实施监控的组织可能是哪家。</p>
-<p>先前几轮的警告曾引发媒体关注，并促使包括欧盟在内的多个政府机构展开调查。欧盟的高级官员先前也曾成为间谍软件的攻击目标。</p>
-<p>根据苹果发布的声明，加上最新通知中涵盖的84个国家，迄今为止，苹果已向总计150多个国家的用户发出了威胁通知。</p>
-<p>根据苹果网站的介绍，某些用户可能因其身份或行为而被单独锁定为雇佣间谍软件攻击的目标。苹果的威胁通知旨在向这类用户发出通知并提供协助。这类攻击要比常规的网络犯罪活动和消费者恶意软件复杂得多，因为雇佣间谍软件攻击者会利用特殊资源将极少数特定的个人及其设备锁定为目标。</p>
+	<p>【大纪元2025年12月05日讯】（大纪元记者张婷综合报导）苹果周五（12月5日）表示，已向84个国家的用户发送了新一轮网络威胁警报，这是这家美国科技巨头为保护用户免受监控威胁而采取的最新举措。</p>
+<p>据路透社报导，苹果是多家定期向用户发出警报的科技公司之一，当这些公司认定用户可能遭到国家支持的黑客攻击时，便会发布相关提醒。苹果在声明中说，这些警报于12月2日发出。但声明并没有提供更多的有关监控的细节，也没有说明受影响用户的数量问题，或实施监控的组织可能是哪家。</p>
+<p>先前几轮的警报曾引发媒体关注，并促使包括欧盟在内的多个政府机构展开调查。欧盟的高级官员先前也曾成为间谍软件的攻击目标。</p>
+<p>根据苹果发布的声明，加上最新通知中涵盖的84个国家，迄今为止，苹果已向总计150多个国家的用户发出了威胁警报。</p>
+<p>根据苹果网站的介绍，某些用户可能因其身份或行为而被单独锁定为雇佣间谍软件攻击的目标。苹果的威胁警报旨在向这类用户发出通知并提供协助。这类攻击要比常规的网络犯罪活动和消费者恶意软件复杂得多，因为雇佣间谍软件攻击者会利用特殊资源将极少数特定的个人及其设备锁定为目标。</p>
 <p>苹果说，根据民间社会组织、技术公司和媒体的公开报导和研究，这种将个人锁定为目标且成本和复杂性极高的攻击历来与国家行为者有关，包括代表国家行为者开发雇佣间谍软件的私营公司。</p>
 <p>责任编辑：林妍#</p>
 <strong>相关新闻：</strong>
@@ -18,7 +18,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/29/n11010938.md#1" target="_blank">古罗马迫害基督徒与中共迫害法轮功对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/6/n11369063.md#1" target="_blank">踏上自由土地 独立日游行 望迫害结束</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/4/n9921539.md#1" target="_blank">尹曙生：产粮大省为何饿死人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/25/n7931425.md#1" target="_blank">手术前一刻 老伴的膀胱癌消失了</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
